--- a/chapter3.Rmd
+++ b/chapter3.Rmd
@@ -1,4 +1,4 @@
-```{r chapter-3-setup, echo = FALSE, message = FALSE}
+```{r chapter-3-setup, echo = FALSE, message = FALSE, warning = FALSE}
 library(MASS)
 library(here)
 library(data.table)
@@ -17,7 +17,7 @@ select <- dplyr::select
 
 ## Week 3 – Logistic regression
 
-```{r load-data}
+```{r load-data, echo = FALSE}
 
 # Print out the names of the variables in the data and describe the data set
 # briefly, assuming the reader has no previous knowledge of it. 
@@ -158,7 +158,7 @@ saveRDS(alc, file = here("data/chapter3_alc_final_dataset.Rds"))
 
 ```{r tau-matrix-final, echo = FALSE, cache = TRUE}
 taumatrix <- GKtauDataframe(alc %>% select(-hu))
-plot(taumatrix,colorPlot = TRUE,diagSize = 0.6)
+plot(taumatrix,colorPlot = FALSE, diagSize = 0.6)
 ```
 
 
