--- a/chapter3.Rmd
+++ b/chapter3.Rmd
@@ -110,7 +110,7 @@ alc %<>% mutate(absnt = GroupNumeric(absences, n = 5)) %>% select(categorical_co
 
 
 
-```{r explore-data-overview}
+```{r explore-data-overview, cache = TRUE, echo = FALSE}
 # The purpose of your analysis is to study the relationships between 
 # high/low alcohol consumption and some of the other variables in the data. 
 # To do this, choose 4 interesting variables in the data and for each of them
@@ -119,11 +119,11 @@ alc %<>% mutate(absnt = GroupNumeric(absences, n = 5)) %>% select(categorical_co
 taumatrix <- GKtauDataframe(alc)
 ```
 
-Because there are as many as `r dim(alc) ` variables in the dataset, choosing interesting and hopefully fruitful variables just by guessing is not likely to succeed. Therefore, let's use Goodman-Kruskal tau to explore associations between variables in the dataset. 
+Because there are as many as `r dim(alc)[2] ` variables in the dataset, choosing interesting and hopefully fruitful variables just by guessing is not likely to succeed. Therefore, let's use [Goodman-Kruskal tau](https://cran.r-project.org/web/packages/GoodmanKruskal/vignettes/GoodmanKruskal.html) to explore associations between variables in the dataset. 
 
 We have to use tau for this, instead of familiar Pearson correlation, as it doesn't give us useful results when variables are not not continuous. It should be noted, that even though many of the variables in the dataset are numerical (such as studytime, frequency of going out and amount of abseentism), in fact they are ordered categorical variables and therefore using tau to study association is sensible choice.
 
-```{r tau-matrix, fig.width=11, fig.height=8, echo = FALSE, cache = TRUE}
+```{r tau-matrix, fig.width=16, fig.height=12, echo = FALSE, cache = TRUE}
 plot(taumatrix,colorPlot = FALSE,diagSize = 0.2)
 ```
 
